--- a/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
@@ -33,7 +33,7 @@
                                             Tên danh mục
                                         </th>
                                         <th>
-                                            #
+                                            Cấp danh mục
                                         </th>
                                         <th class="text-center">
                                             Chỉnh sửa
@@ -54,9 +54,7 @@
                                             <td style="font-weight:bold">
                                                 @item.category_content
                                             </td>
-                                            <td>
-                                                #
-                                            </td>
+                                            <td>LV 1</td>
                                             <td class="text-center">
                                                 <div class="buttons">
                                                     <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = item.category_id })">
@@ -79,9 +77,7 @@
                                                     &emsp;
                                                     @items.category_content
                                                 </td>
-                                                <td>
-                                                    #
-                                                </td>
+                                                <td>LV 2</td>
                                                 <td class="text-center">
                                                     <div class="buttons">
                                                         <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = items.category_id })">
@@ -105,9 +101,7 @@
                                                         &emsp;
                                                         @itemss.category_content
                                                     </td>
-                                                    <td>
-                                                        #
-                                                    </td>
+                                                    <td>LV 3</td>
                                                     <td class="text-center">
                                                         <div class="buttons">
                                                             <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = items.category_id })">
