--- a/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
@@ -19,7 +19,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân: @Model.AspNetUser.Email</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo giảng viên: @Model.AspNetUser.Email</h4>
                     </div>
                 </div>
 
@@ -44,6 +44,7 @@
 
                                     <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                                         <div class="col-lg-12">
+
                                             <table class="table table-bordered dataTable">
                                                 <tbody>
                                                     <tr class="" style="max-width: 50px">
@@ -57,7 +58,7 @@
                                                             inputIndex++;
                                                             <tr id="formInput-@items_lv2.category_id-@inputIndex">
                                                                 <td>
-                                                                    <input readonly type="text" value="@items_content.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                    <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
                                                                 </td>
                                                             </tr>
                                                         }
@@ -73,59 +74,50 @@
                                     </div>
                                     if (models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                     {
+                                        <div>
                                             <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                                                <div class="col-lg-12">
-                                                    <table class="table table-bordered dataTable">
-                                                        <tbody>
-                                                            <tr class="" style="max-width: 50px">
-                                                                @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
-                                                                {
+                                                @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
+                                                {
+                                                    <div class="col">
+                                                        <table class="table table-bordered dataTable">
+                                                            <tbody>
+                                                                <tr class="" style="max-width: 50px">
                                                                     <th>@items_lv3.Category.category_content</th>
-                                                                }
+                                                                </tr>
+                                                                @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id &&items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
 
-                                                            </tr>
-                                                            @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
-
-                                                            @foreach (var item in items_groupby)
-                                                            {
-                                                                <tr>
-
-                                                                    @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_personal_report_detail_id == item.Key).ToList())
+                                                                @foreach (var item in items_groupby)
+                                                                {
+                                                                    foreach (var items_content_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_personal_report_detail_id == item.Key).ToList())
                                                                     {
                                                                         int inputIndex = 0;
                                                                         inputIndex++;
-                                                                        if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv3.form_personal_report_detail_id).Count() > 0)
+                                                                        if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).Count() > 0)
                                                                         {
-
-                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv3.form_personal_report_detail_id).ToList())
+                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).ToList())
                                                                             {
-                                                                                <td>
-                                                                                    <input readonly type="text" value="@items_content.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items_lv3.category_id-@inputIndex">
-                                                                                </td>
-
+                                                                                <tr>
+                                                                                    <td>
+                                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_content_lv3.category_id-@inputIndex">
+                                                                                    </td>
+                                                                                </tr>
                                                                             }
                                                                         }
-
                                                                     }
-                                                                </tr>
-                                                            }
-
-
-                                                            <tr hidden id="append-@items.category_id"></tr>
-
-                                                        </tbody>
-
+                                                                }
+                                                                <tr hidden id="append-@items.category_id"></tr>
+                                                            </tbody>
                                                         </table>
-
-                                                </div>
-
+                                                    </div>
+                                                }
                                             </div>
+                                        </div>
                                     }
                                 }
                             }
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
+                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
                             </div>
                             <hr />
                             <div class="col-12">
@@ -146,7 +138,6 @@
                                                     </div>
                                                 </div>
                                             }
-
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
@@ -172,5 +163,3 @@
         </div>
     </div>
 </section>
-
-
