--- a/MonthlyStatement/Areas/Personal/Views/Report/Personal.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/Personal.cshtml
@@ -79,6 +79,9 @@
                                                     <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("PersonalDetail","Report", new {id = item.personal_report_id})">
                                                         Xem
                                                     </a>
+                                                    <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("PersonalReportEdit","Report", new {id = item.personal_report_id})">
+                                                        Chỉnh sửa
+                                                    </a>
                                                 </div>
                                             </td>
                                         </tr>
