--- a/MonthlyStatement/Areas/Admin/Views/Categories/Create.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Create.cshtml
@@ -17,65 +17,72 @@
                     <div class="card">
                         <div class="card-header bg-primary" style="height:100px">
                             <h4 class="text-white" style="font-size:1.75rem">Tạo mới danh mục</h4>
+
                         </div>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
 
-                                <!-- Account details card-->
-                                <div class="card-header"><b>Thông tin chi tiết</b></div>
-                                <div class="card-body" style="margin-top: 0.2rem">
-                                    <div class="mb-3">
-                                        <label class="small mb-1">Chọn bậc danh mục</label>
-                                        <select id="lv-category" class="form-control">
-                                            <option selected value="1">Danh mục bậc 1</option>
-                                            <option value="2">Danh mục bậc 2</option>
-                                            <option value="3">Danh mục bậc 3</option>
-                                        </select>
-                                    </div>
+                            <!-- Account details card-->
+                            <h7 class="text-danger">
+                                *Lưu ý: -Khi tạo DANH MỤC BẬC 2 sẽ tự động tạo ra 1 DANH MỤC BẬC 3 giống như vậy
+                                <br>&emsp;&emsp;&emsp; -Phải F5 lại trang khi đổi cấp bậc danh mục
+                                <br>&emsp;&emsp;&emsp; -Danh mục không chứa ký tự "-"
+                            </h7>
 
-                                    <div class="mb-3" hidden="hidden" id="div-lv1">
-                                        <label class="small mb-1">Chọn danh mục bậc 1</label>
-                                        <select id="lv1-category" class="form-control">
-                                            @foreach (var item in category_lv1)
+                            <div class="card-header"><b>Thông tin chi tiết</b></div>
+                            <div class="card-body" style="margin-top: 0.2rem">
+                                <div class="mb-3">
+                                    <label class="small mb-1">Chọn bậc danh mục</label>
+                                    <select id="lv-category" class="form-control">
+                                        <option selected value="1">Danh mục bậc 1</option>
+                                        <option value="2">Danh mục bậc 2</option>
+                                        <option value="3">Danh mục bậc 3</option>
+                                    </select>
+                                </div>
+
+                                <div class="mb-3" hidden="hidden" id="div-lv1">
+                                    <label class="small mb-1">Chọn danh mục bậc 1</label>
+                                    <select id="lv1-category" class="form-control">
+                                        @foreach (var item in category_lv1)
+                                        {
+                                            <option value="@item.category_id">@item.category_content</option>
+                                        }
+                                    </select>
+                                </div>
+
+                                @foreach (var item in category_lv1)
+                                {
+                                    <div class="mb-3" hidden="hidden" id="div-lv2-@item.category_id">
+                                        <label class="small mb-1">Chọn danh mục bậc 2</label>
+                                        <select id="lv2-category-@item.category_id" class="form-control">
+                                            @foreach (var items in category_lv2.Where(c => c.category_of_id == item.category_id && c.category_lv == 2))
                                             {
-                                                <option value="@item.category_id">@item.category_content</option>
+                                                <option value="@items.category_id">@items.category_content</option>
                                             }
                                         </select>
                                     </div>
+                                }
 
-                                    @foreach (var item in category_lv1)
-                                    {
-                                        <div class="mb-3" hidden="hidden" id="div-lv2-@item.category_id">
-                                            <label class="small mb-1">Chọn danh mục bậc 2</label>
-                                            <select id="lv2-category-@item.category_id" class="form-control">
-                                                @foreach (var items in category_lv2.Where(c => c.category_of_id == item.category_id && c.category_lv == 2))
-                                                {
-                                                    <option value="@items.category_id">@items.category_content</option>
-                                                }
-                                            </select>
-                                        </div>
-                                    }
-
-                                    <div class="mb-3">
-                                        <!--(Tên danh mục)-->
-                                        <label class="small mb-1">Tên danh mục</label>
-                                        <input class="form-control" type="text" id="input-category" />
-                                        <p hidden="hidden" id="input-category-validation">
-                                        </p>
-                                    </div>
-
-                                    <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                                        <button style="width:180px; color:white" type="submit" class="btn btn-primary" id="submit-data">
-                                            Tạo mới
-                                        </button>
-                                        &emsp;
-                                        <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories")">
-                                            Hủy
-                                        </a>
-                                    </div>
+                                <div class="mb-3">
+                                    <!--(Tên danh mục)-->
+                                    <label class="small mb-1">Tên danh mục</label>
+                                    <input class="form-control" type="text" id="input-category" />
+                                    <p hidden="hidden" id="input-category-validation">
+                                    </p>
                                 </div>
-                            
+
+                                <div style="text-align: center; margin-top:1.8rem" class="mb-3">
+                                    <button style="width:180px; color:white" type="submit" class="btn btn-primary" id="submit-data">
+                                        Tạo mới
+                                    </button>
+                                    &emsp;
+                                    <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories")">
+                                        Hủy
+                                    </a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
