--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormReports.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormReports.cshtml
@@ -56,8 +56,8 @@
                                     <i class="fas fa-user"></i>
                                 </div>
                                 <h2>Nhân viên</h2>
-                                <a href="@Url.Action("FormStaffDetail", "ReportPeriods", new { id = Model.FormPersonalReports.FirstOrDefault(f => f.report_period_id == Model.report_period_id).form_personal_report_id})" class="btn btn-light mt-4">Xem chi tiết</a>
-                                <a href="@Url.Action("FormStaffEdit", "ReportPeriods", new { id = Model.FormPersonalReports.FirstOrDefault(f => f.report_period_id == Model.report_period_id).form_personal_report_id})" class="btn btn-warning mt-4">Chỉnh sửa</a>
+                                <a href="@Url.Action("FormStaffDetail", "ReportPeriods", new { id = Model.FormStaffReports.FirstOrDefault(f => f.report_period_id == Model.report_period_id).form_staff_report_id})" class="btn btn-light mt-4">Xem chi tiết</a>
+                                <a href="@Url.Action("FormStaffEdit", "ReportPeriods", new { id = Model.FormStaffReports.FirstOrDefault(f => f.report_period_id == Model.report_period_id).form_staff_report_id})" class="btn btn-warning mt-4">Chỉnh sửa</a>
                             </div>
                         </div>
                     </div>
