--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
@@ -6,6 +6,7 @@
     int i = 0;
     int j = 64;
     int k = 0;
+    string lstId = "";
 
     CP25Team04Entities models = new CP25Team04Entities();
     int idperiod = Model.report_period_id;
@@ -28,88 +29,114 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-
-                            @foreach (var items in Model.FormPersonalReportDetails)
+                            @foreach (var items in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_lv == 1).ToList())
                             {
-                                if (items.Category.category_of_id == null)
+
+                                i = 0;
+                                j++;
+                                <br />
+                                <div class="section-title mt-1" style="font-weight:bold">
+                                    @(((char) j).ToString()). @items.Category.category_content.ToUpper()
+
+                                </div>
+
+                                foreach (var items_lv2 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
                                 {
-                                    i = 0;
-                                    j++;
-                                    
-                                    <br />
-                                    <div class="section-title mt-1" style="font-weight:bold">
-                                        @(((char) j).ToString()). @items.Category.category_content.ToUpper()
+                                    lstId += items_lv2.category_id + "-";
+                                    i++;
+
+                                    <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                        <div class="col-lg-12">
+
+                                            <table class="table table-bordered dataTable">
+                                                <tbody>
+                                                    <tr class="" style="max-width: 50px">
+                                                        <th>@(i). @items_lv2.Category.category_content</th>
+                                                    </tr>
+
+                                                    @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).Count() > 0)
+                                                    {
+
+                                                        int inputIndex = 0;
+                                                        if (!models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
+                                                        {
+                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).ToList())
+                                                            {
+                                                                inputIndex++;
+                                                                <tr id="formInput-@items_lv2.category_id-@inputIndex">
+                                                                    <td>
+                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                    </td>
+                                                                </tr>
+                                                            }
+                                                        }
+                                                        else
+                                                        {
+                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).ToList())
+                                                            {
+                                                                inputIndex++;
+                                                                <tr id="formInput-@items_lv2.category_id-@inputIndex" class="d-none">
+                                                                    <td>
+                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                    </td>
+                                                                </tr>
+                                                            }
+                                                        }
+                                                    }
+                                                    <tr hidden id="append-@items.category_id"></tr>
+                                                </tbody>
+                                            </table>
+
+                                        </div>
 
                                     </div>
-                                }
-                                else
-                                {
-                                    if (items.Category.category_lv == 2)
+                                    if (models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                     {
-                                        i++;
-                                        k = 0;
-                                        <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                                            <div class="col-lg-12">
-                                                <table class="table table-bordered dataTable">
-                                                    <tbody>
-                                                        <tr style="max-width: 50px">
-                                                            <th colspan="2">@(i). @items.Category.category_content</th>
-                                                        </tr>
-                                                        @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).Count() > 0)
-                                                        {
-                                                            int inputIndex = 0;
-                                                            foreach (var itemss in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).ToList())
-                                                            {
-                                                                inputIndex++;
-                                                                <tr id="formInput-@items.category_id-@inputIndex">
-                                                                    <td colspan="2">
-                                                                        <input type="text" value="@itemss.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items.category_id-@inputIndex" readonly>
-                                                                        <p hidden id="validation-noidung-@items.category_id-@inputIndex" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                    </td>
+                                        <div>
+                                            <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
+                                                {
+                                                    <div class="col">
+                                                        <table class="table table-bordered dataTable">
+                                                            <tbody>
+                                                                <tr class="" style="max-width: 50px">
+                                                                    <th>@items_lv3.Category.category_content</th>
                                                                 </tr>
-                                                            }
-                                                        }
+                                                                @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
 
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        k++;
-                                        <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.5rem">
-                                            <div class="col-lg-12">
-                                                <table class="table table-bordered dataTable">
-                                                    <tbody>
-                                                        <tr style="max-width: 50px">
-                                                            <th colspan="2">@(i).@(k) @items.Category.category_content</th>
-                                                        </tr>
-                                                        @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).Count() > 0)
-                                                        {
-                                                            int inputIndex = 0;
-                                                            foreach (var itemss in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).ToList())
-                                                            {
-                                                                inputIndex++;
-                                                                <tr id="formInput-@items.category_id-@inputIndex">
-                                                                    <td colspan="2">
-                                                                        <input type="text" value="@itemss.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items.category_id-@inputIndex" readonly>
-                                                                        <p hidden id="validation-noidung-@items.category_id-@inputIndex" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                    </td>
-                                                                </tr>
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
+                                                                @foreach (var item in items_groupby)
+                                                                {
+                                                                    foreach (var items_content_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_personal_report_detail_id == item.Key).ToList())
+                                                                    {
+                                                                        int inputIndex = 0;
+                                                                        inputIndex++;
+                                                                        if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).Count() > 0)
+                                                                        {
+                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).ToList())
+                                                                            {
+                                                                                <tr>
+                                                                                    <td>
+                                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_content_lv3.category_id-@inputIndex">
+                                                                                    </td>
+                                                                                </tr>
+                                                                            }
+                                                                        }
+                                                                    }
+                                                                }
+                                                                <tr hidden id="append-@items.category_id"></tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                }
                                             </div>
                                         </div>
                                     }
                                 }
                             }
+                            <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-
                             <hr />
                             <div class="col-12">
                                 <div class="card" style="background-color: #e9ecef">
@@ -147,7 +174,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -155,5 +181,3 @@
         </div>
     </div>
 </section>
-
-
