--- a/MonthlyStatement/Views/Account/Login.cshtml
+++ b/MonthlyStatement/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
         min-height: 100vh;
         position: relative;
         width: 100%;
-        background-image: url(../../assets/img/vlu/background.jpg)
+        background-image: url(./../assets/img/vlu/background.jpg)
     }
 
         .bg-img::after {
